--- a/index.html
+++ b/index.html
@@ -47,25 +47,32 @@
     </div>
 </section>
 
+<section>
+    <h3>Be present at app stores backed by these great Chinese companies</h3>
+    <div class="home_stores">
+        <img src="img/icon-huawei.png"/>
+        <div>huawei</div>
+    </div>
+    <div class="home_stores">
+        <img src="img/icon-xiaomi.png"/>
+        <div>xiaomi</div>
+    </div>
+    <div class="home_stores">oppo</div>
+    <div class="home_stores">alibaba</div>
+    <div class="home_stores">baidu</div>
+</section>
+
 <section id="home_section_2">
     <h3>service packages</h3>
 
 </section>
 
-<section>
-    <h3>Be present at app stores backed by these great Chinese companies</h3>
-    <div class="home_stores">huawei</div>
-    <div class="home_stores">oppo</div>
-    <div class="home_stores">alibaba</div>
-    <div class="home_stores">baidu</div>
-    <div class="home_stores">xiaomi</div>
-</section>
 
 <section id="home_section_contact">
     <h3>something besides email (slack, whatsapp, wechat)</h3>
-    <a class="home_btnSlack" href="https://join.slack.com/redapp-co/shared_invite/MjA3NDM5NTMyMjE0LTE0OTg4NzU4MDAtN2M2MTc2M2IwOA">
-        <img src="slack.svg"/>
-        <span>Join Redapp on Slack!</span>
+    <a class="home_btnSlack base_background_grey" href="https://join.slack.com/redapp-co/shared_invite/MjA3NDM5NTMyMjE0LTE0OTg4NzU4MDAtN2M2MTc2M2IwOA">
+        <img src="img/slack.svg"/>
+        <span class="base_color_white">Join Redapp on Slack!</span>
     </a>
 </section>
 
