scroll easing change

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
         var elem =  document.getElementById('home_section_1');
 
         if(typeof Velocity != 'undefined'){
-            Velocity(elem, "scroll", { duration: 1500, easing: "spring" });
+            Velocity(elem, "scroll", { duration: 500, easing: "quadratic" });
             Velocity(elem, { opacity: 1 });
         }
         
