oppo store image bug fix

--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
             <div class="home_stores_nameAlt">Wandoujia, UC</div>
         </div>
         <div class="home_stores">
-            <img src="img/stores/Oppo.png"/>
-            <div>Oppo</div>
+            <img src="img/stores/oppo.png"/>
+            <div>oppo</div>
         </div>
         <div class="home_stores">
             <img src="img/stores/lenovo.png"/>
