added google analytics

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 <section id="home_section_contact">
     <h1>something besides email (slack, whatsapp, wechat)</h1>
     <center>
-    <a class="home_btnSlack base_background_greyGrad" href="https://join.slack.com/redapp-co/shared_invite/MjA3NDM5NTMyMjE0LTE0OTg4NzU4MDAtN2M2MTc2M2IwOA">
+    <a class="home_btnSlack base_background_greyGrad" target="_blank" href="https://join.slack.com/redapp-co/shared_invite/MjA3NDM5NTMyMjE0LTE0OTg4NzU4MDAtN2M2MTc2M2IwOA">
         <img src="img/slack.svg"/>
         <span>Join Redapp on Slack!</span>
     </a>
@@ -192,7 +192,7 @@
         <div>WeChat : hyunwoo126</div>
         <div>Whatsapp : hyunwoo126</div>
         <div>Skype : hyunwoo126</div>
-        <div>email : hyunwoo126</div>
+        <div>email : ray@redapp.co</div>
     </div>
     </center>
     <div class="home_copyright">Copyright ©️ Redapp 2017</div>
@@ -227,5 +227,13 @@ function resize(){
  })();
  </script>
  <script src="https://cdnjs.cloudflare.com/ajax/libs/velocity/1.5.0/velocity.min.js"></script>
+ <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+  ga('create', 'UA-102316088-1', 'auto');
+  ga('send', 'pageview');
+</script>
 </body>
 </html>
