--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>REDAPP.CO | Reach China's 600M mobile users</title>
+<title>Redapp.co | Reach China's 600M mobile users</title>
 <script src="https://use.fontawesome.com/7d18d79adf.js"></script>
 <meta charset="utf-8">
 <meta name=viewport content="width=device-width, initial-scale=1">
@@ -110,7 +110,7 @@
 
     <div class="home_package_container">
         <div class="home_package_column minTablet">
-            <div class="home_package_row1"></div>
+            <div class="home_package_row1">&nbsp;</div>
             <div>Pricing</div>
             <div class="home_package_halfH">Number of App Stores</div>
             <div class="home_package_halfH">App Updates and Maintenance</div>
@@ -118,22 +118,22 @@
         <div class="home_package_column">
             <div class="home_package_row1">Annual Subscription</div>
             <div class="home_package_priceBox">
-                <div>2,000 USD / year</div>
-                <div class="home_package_rmb">13,600 RMB / year</div>
+                <div>USD <span class="home_package_fontLarger">2,000</span> / year</div>
+                <div class="home_package_rmb">RMB 13,600 / year</div>
             </div>
-            <div>10 <span class="maxTabletL">stores</span></div>
+            <div><span class="home_package_fontLarger">10</span> <span class="maxTabletL">stores</span></div>
             <div>
                 <i class="fa fa-check" aria-hidden="true"></i>
                 <span class="maxTabletL">free app updates and maintenance</span>
             </div>
         </div>
         <div class="home_package_column">
-            <div class="home_package_row1">Quater Subscription</div>
+            <div class="home_package_row1">Quarter Subscription</div>
             <div class="home_package_priceBox">
-                <div>2,000 USD / year</div>
-                <div class="home_package_rmb">13,600 RMB / year</div>
+                <div>USD <span class="home_package_fontLarger">600</span> / year</div>
+                <div class="home_package_rmb">RMB 4,100 / year</div>
             </div>
-            <div>10 <span class="maxTabletL">stores</span></div>
+            <div><span class="home_package_fontLarger">10</span> <span class="maxTabletL">stores</span></div>
             <div>
                 <i class="fa fa-check" aria-hidden="true"></i>
                 <span class="maxTabletL">free app updates and maintenance</span>
@@ -142,26 +142,46 @@
         <div class="home_package_column">
             <div class="home_package_row1">One-time Publishing</div>
             <div class="home_package_priceBox">
-                <div>2,000 USD / year</div>
-                <div class="home_package_rmb">13,600 RMB / year</div>
+                <div>USD <span class="home_package_fontLarger">60</span> / store</div>
+                <div class="home_package_rmb">RMB 410 / store</div>
             </div>
-            <div>1 - 10 <span class="maxTabletL">stores</span></div>
+            <div><span class="home_package_fontLarger">1 - 10</span> <span class="maxTabletL">stores</span></div>
             <div>
                 <i class="fa fa-times" aria-hidden="true"></i>
                 <span class="maxTabletL">no app updates or maintenance</span>
             </div>
         </div>
+        <div class="home_package_deposit">
+            <i class="fa fa-handshake-o" aria-hidden="true"></i> All of our packages require deposit of USD 30 (RMB 200) <u>per store</u> to proceed.
+            Remaining amount should be paid once apps are published on all the agreed upon stores.
+        </div>
     </div>
-
-
-
-
 </section>
 
-<section id="home_section_3">
+<section>
+    <h1>Additional Services</h1>
+    <div class="home_package_container">
+        <div class="home_package_column">
+            <div class="home_package_row1">1 year of weekly download reports of all stores</div>
+            <div class="home_package_priceBox">
+                <div>USD <span class="home_package_fontLarger">250</span> / year</div>
+                <div class="home_package_rmb">RMB 1,700 / year</div>
+            </div>
+        </div>
+        <div class="home_package_column">
+            <div class="home_package_row1">1 year of bi-weekly comments translation (to English)</div>
+            <div class="home_package_priceBox">
+                <div>USD <span class="home_package_fontLarger">250</span> / year</div>
+                <div class="home_package_rmb">RMB 1,700 / year</div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section>
     <h1>SDK integration</h1>
      <div>Our native Chinese Android and iOS developers can help you integrate some of the most popular Chinese app SDK's to your app.</div>
-    <div class="text_align_left">
+    <div class="text_align_left" style="padding: 10px 20px;">
         <div>
             <h4><i class="fa fa-wechat" aria-hidden="true"></i> WeChat</h4>
             <div>
@@ -171,28 +191,29 @@
                     <li>Share customized content to WeChat contacts and Moments</li>
                     <li>Make in-app purchases with WeChat Pay</li>
                 </ol>
+                <div><i class="fa fa-info-circle"></i> Contact us for more information.</div>
             </div>
         </div>
-        <div>
+        <div class="display_none">
             <h4>Alipay</h4>
         </div>
     </div>
 </section>
 
 <section id="home_section_contact">
-    <h1>something besides email (slack, whatsapp, wechat)</h1>
+    <h1><i class="fa fa-address-card-o"></i> Contact Us</h1>
     <center>
-    <a class="home_btnSlack base_background_greyGrad" target="_blank" href="https://join.slack.com/redapp-co/shared_invite/MjA3NDM5NTMyMjE0LTE0OTg4NzU4MDAtN2M2MTc2M2IwOA">
+    <a style="display: inline-block;" class="home_btnSlack base_background_greyGrad" target="_blank" href="https://join.slack.com/redapp-co/shared_invite/MjA3NDM5NTMyMjE0LTE0OTg4NzU4MDAtN2M2MTc2M2IwOA">
         <img src="img/slack.svg"/>
-        <span>Join Redapp on Slack!</span>
+        <span>Join Redapp on Slack !</span>
     </a>
     <br/>
-    <div class="home_contactList">
+    <div style="display: inline-block;" class="home_contactList">
         <div>Also find us in</div>
-        <div>WeChat : hyunwoo126</div>
-        <div>Whatsapp : hyunwoo126</div>
-        <div>Skype : hyunwoo126</div>
-        <div>email : ray@redapp.co</div>
+        <div><i class="fa fa-wechat"></i> WeChat : huan8438</div>
+        <div><i class="fa fa-whatsapp"></i> Whatsapp : hyunwoo126</div>
+        <div><i class="fa fa-skype"></i> Skype : soonerboomer4</div>
+        <div><i class="fa fa-envelope-o"></i> email : ray@redapp.co</div>
     </div>
     </center>
     <div class="home_copyright">Copyright ©️ Redapp 2017</div>
