ray whatsapp and layout fix

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
     <div style="display: inline-block;" class="home_contactList">
         <div>Also find us in</div>
         <div><i class="fa fa-wechat"></i> WeChat : huan8438</div>
-        <div><i class="fa fa-whatsapp"></i> Whatsapp : hyunwoo126</div>
+        <div><i class="fa fa-whatsapp"></i> Whatsapp : +1 774 253 9519</div>
         <div><i class="fa fa-skype"></i> Skype : soonerboomer4</div>
         <div><i class="fa fa-envelope-o"></i> email : ray@redapp.co</div>
     </div>
