fixed quarter price

--- a/index.html
+++ b/index.html
@@ -130,8 +130,8 @@
         <div class="home_package_column">
             <div class="home_package_row1">Quarter Subscription</div>
             <div class="home_package_priceBox">
-                <div>USD <span class="home_package_fontLarger">600</span> / year</div>
-                <div class="home_package_rmb">RMB 4,100 / year</div>
+                <div>USD <span class="home_package_fontLarger">600</span> / 3 months</div>
+                <div class="home_package_rmb">RMB 4,100 / 3 months</div>
             </div>
             <div><span class="home_package_fontLarger">10</span> <span class="maxTabletL">stores</span></div>
             <div>
