--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
 <meta charset="utf-8">
 <meta name=viewport content="width=device-width, initial-scale=1">
 <!--<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">-->
-<meta name="description" content="">
+<meta name="description" content="Reach China's 600 million smartphone users by launching your app on China's most popular app stores.">
+<meta name="keywords" content="redapp, app, appstore, mobile, china, android, ios, xiaomi, huawei, tencent, baidu, wechat, alipay, alibaba">
+<meta name="format-detection" content="telephone=no">
+<meta name="format-detection" content="date=no">
+<meta name="format-detection" content="address=no">
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 <link rel="stylesheet" href="base.css">
 <link rel="stylesheet" href="home.css">
@@ -16,48 +20,49 @@
 <style type="text/css">
 </style>
 <body class="home_body">
-<section id="home_section_top" class="borderBox base_background_greyGrad_L clickable">
+<section id="home_section_top" class="borderBox base_background_red_grad_V base_color_grey_50 clickable">
     <div class="home_logo_container">
         <div class="home_logo_name">
-            <span class="base_color_red">RED</span>APP
+            <span class="base_color_white">RED</span><span class="base_color_grey_900">APP</span>
         </div>
         <div class="home_logo_slogan">Reach China's 600M mobile users.</div>
 
         <div class="home_market_block">
-            <div class="home_market_fig base_color_red">
+            <div class="home_market_fig">
                 <i class="fa fa-bar-chart" aria-hidden="true"></i>
             </div>
             <div>China will surpass <strong>600 million</strong> smartphone users in 2017</div>
         </div><div class="home_market_block">
-            <div class="home_market_fig base_color_red">
+            <div class="home_market_fig">
                 <i class="fa fa-globe" aria-hidden="true"></i>
             </div>
             <div>China makes up <strong>26%</strong> of world smartphone users</div>
         </div><div class="home_market_block">
-            <div class="home_market_fig base_color_red">
+            <div class="home_market_fig">
                 <i class="fa fa-android" aria-hidden="true"></i>
             </div>
             <div><strong>75%</strong> of mobile users in China use Android</div>
         </div><div class="home_market_block">
-            <div class="home_market_fig base_color_red">
+            <div class="home_market_fig">
                 <span class="fa-stack">
                     <i class="fa fa-ban fa-stack-2x"></i>
-                    <i class="fa fa-google fa-stack-1x base_color_grey"></i>
+                    <i class="fa fa-google fa-stack-1x base_color_grey_700"></i>
                     
                 </span>
             </div>
             <div><strong>Google Play</strong> is <em>definitely</em> blocked in China</div>
         </div>
     </div>
-    <div id="home_section_top_arrow">
-        <div>Click to learn more</div>
-        <i class="fa fa-chevron-down" aria-hidden="true"></i>
+    <div id="home_section_top_arrow" class="base_color_red_500 base_boxshadow_3 box_shadow_hover">
+        <div>Get Started Now</div>
         <i class="fa fa-chevron-down" aria-hidden="true"></i>
     </div>
 </section>
 
 <section id="home_section_1">
     <h1>Launch your app on China's 10 largest app stores</h1>
+    <div class="home_headerDiv base_background_red_grad_V"></div>
+
     <div class="home_stores_row">
         <div class="home_stores">
             <img src="img/stores/xiaomi.png"/>
@@ -107,6 +112,7 @@
 
 <section id="home_section_2">
     <h1>service packages</h1>
+    <div class="home_headerDiv base_background_red_grad_V"></div>
 
     <div class="home_package_container">
         <div class="home_package_column minTablet">
@@ -160,6 +166,8 @@
 
 <section>
     <h1>Additional Services</h1>
+    <div class="home_headerDiv base_background_red_grad_V"></div>
+
     <div class="home_package_container">
         <div class="home_package_column">
             <div class="home_package_row1">1 year of weekly download reports of all stores</div>
@@ -178,13 +186,16 @@
     </div>
 </section>
 
-<section>
+<section id="home_section_sdk">
     <h1>SDK integration</h1>
-     <div>Our native Chinese Android and iOS developers can help you integrate some of the most popular Chinese app SDK's to your app.</div>
-    <div class="text_align_left" style="padding: 10px 20px;">
-        <div>
-            <h4><i class="fa fa-wechat" aria-hidden="true"></i> WeChat</h4>
-            <div>
+    <div class="home_headerDiv base_background_red_grad_V"></div>
+
+     <div>Our native Chinese Android and iOS developers can help you integrate some of the most popular Chinese app SDKs to your app.</div>
+
+     <div class="home_package_container">
+        <div class="home_package_column">
+            <div class="home_package_row1"><i class="fa fa-wechat" aria-hidden="true"></i> WeChat</div>
+            <div class="home_package_normal">
                 If you want to be where users are in China, you need to be on WeChat. Using WeChat's SDK, you get access to:
                 <ol>
                     <li>Login by WeChat</li>
@@ -193,9 +204,6 @@
                 </ol>
                 <div><i class="fa fa-info-circle"></i> Contact us for more information.</div>
             </div>
-        </div>
-        <div class="display_none">
-            <h4>Alipay</h4>
         </div>
     </div>
 </section>
