--- a/index.html
+++ b/index.html
@@ -189,9 +189,7 @@
 <section id="home_section_sdk">
     <h1>SDK integration</h1>
     <div class="home_headerDiv base_background_red_grad_V"></div>
-
      <div>Our native Chinese Android and iOS developers can help you integrate some of the most popular Chinese app SDKs to your app.</div>
-
      <div class="home_package_container">
         <div class="home_package_column">
             <div class="home_package_row1"><i class="fa fa-wechat" aria-hidden="true"></i> WeChat</div>
@@ -205,6 +203,22 @@
                 <div><i class="fa fa-info-circle"></i> Contact us for more information.</div>
             </div>
         </div>
+    </div>
+</section>
+
+<section id="home_section_cta">
+    <h1>Get in Touch!</h1>
+    <div class="home_headerDiv base_background_red_grad_V"></div>
+    <div class="home_cta_msg_ready">Leave us your email and we will get in touch with you.</div>
+    <div class="home_cta_msg_loading">
+        <i class="fa fa-circle-o-notch fa-spin fa-fw" aria-hidden="true"></i>
+        Sending...
+    </div>
+    <div class="home_cta_msg_success">Thank you and we will get back to you soon.</div>
+
+    <div class="home_cta_form">
+        <input id="home_cta_email" type="text" placeholder="Place your email here..."/>
+        <button id="home_cta_btn" class="base_boxshadow_3 base_background_red_grad_V">send</button>
     </div>
 </section>
 
@@ -253,16 +267,75 @@ function resize(){
 
     window.addEventListener('resize', resize);
 
+    var xhr = new XMLHttpRequest();
+    //xhr.open("POST", 'http://localhost:5000/cta');
+    xhr.open("POST", 'http://fast-taiga-21103.herokuapp.com/cta');
+
+    xhr.onreadystatechange = function() {//Call a function when the state changes.
+        if(xhr.readyState == XMLHttpRequest.DONE && xhr.status == 200) {
+            // Request finished. Do processing here.
+            $('#home_section_cta').addClass('home_cta_success');
+        }
+    }
+
+    
+
+    function submit_cta(){
+        var email = document.getElementById('home_cta_email');
+        
+        if(validateEmail(email.value)){
+            $('#home_section_cta').addClass('home_cta_loading');
+            var data = {
+                email: email.value,
+            };
+            console.log(JSON.stringify(data));
+            xhr.setRequestHeader('Content-Type', 'application/json');
+            xhr.send(JSON.stringify(data)); 
+        } else {
+            $(email).trigger('input');
+        }        
+    }
+
+
+
+    function validateEmail(email) {
+        //var re = /^(([^<>()[\]\\.,;:\s@\"]+(\.[^<>()[\]\\.,;:\s@\"]+)*)|(\".+\"))@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\])|(([a-zA-Z\-0-9]+\.)+[a-zA-Z]{2,}))$/;
+        var re = /^[a-z0-9!#$%&'*+/=?^_`{|}~-]+(?:\.[a-z0-9!#$%&'*+/=?^_`{|}~-]+)*@(?:[a-z0-9](?:[a-z0-9-]*[a-z0-9])?\.)+[a-z0-9](?:[a-z0-9-]*[a-z0-9])?/;
+        return re.test(email);
+    }
+
+    document.getElementById('home_cta_email').oninput = function(e){
+        var email = document.getElementById('home_cta_email').value;
+        var section = $('#home_section_cta').removeClass('home_cta_invalidEmail').removeClass('home_cta_validEmail');
+        if(email.length < 1){
+            return;
+        }
+        else if(!validateEmail(email)){
+            section.addClass('home_cta_invalidEmail');
+            return;
+        } else {
+            section.addClass('home_cta_validEmail');
+        }
+    }
+
+    document.getElementById('home_cta_email').onkeypress = function(e){
+        if(e.which == 13 || e.keyCode == 13){
+            submit_cta();
+        }
+    }
+    document.getElementById('home_cta_btn').onclick = submit_cta;
+
  })();
- </script>
- <script src="https://cdnjs.cloudflare.com/ajax/libs/velocity/1.5.0/velocity.min.js"></script>
- <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-  ga('create', 'UA-102316088-1', 'auto');
-  ga('send', 'pageview');
+</script>
+<script src="http://code.jquery.com/jquery-3.2.1.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/velocity/1.5.0/velocity.min.js"></script>
+<script>
+(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+ga('create', 'UA-102316088-1', 'auto');
+ga('send', 'pageview');
 </script>
 </body>
 </html>
