--- a/appsubmit/index.html
+++ b/appsubmit/index.html
@@ -11,15 +11,12 @@
 <meta name="format-detection" content="telephone=no">
 <meta name="format-detection" content="date=no">
 <meta name="format-detection" content="address=no">
-<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-<link rel="stylesheet" href="base.css">
-<link rel="stylesheet" href="home.css">
-<link rel="stylesheet" href="form.css">
+<link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
+<link rel="stylesheet" href="../css/base.css">
+<link rel="stylesheet" href="../css/home.css">
+<link rel="stylesheet" href="../css/form.css">
 <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet"> 
 </head>
-<style type="text/css">
-
-</style>
 <body class="form base_background_red_grad_V">
 <div class="base_logo_name">
     <span class="base_color_white">RED</span><span class="base_color_grey_900">APP</span>
