--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <meta name="format-detection" content="date=no">
 <meta name="format-detection" content="address=no">
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-<link rel="stylesheet" href="base.css">
-<link rel="stylesheet" href="home.css">
+<link rel="stylesheet" href="css/base.css">
+<link rel="stylesheet" href="css/home.css">
 <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet"> 
 </head>
 
@@ -304,7 +304,7 @@
 </section>
 
 
- <script type="text/javascript">
+<script type="text/javascript">
 var elem_top;
 function resize(){
     if(!elem_top){
@@ -312,8 +312,8 @@ function resize(){
     }
     elem_top.style.height = window.innerHeight+'px';
 }
- //function to run on DOM ready
- (function(){
+//function to run on DOM ready
+(function(){
     resize();
 
     elem_top.onclick = function(){
