appsubmit isReady back to false

--- a/appsubmit/index.html
+++ b/appsubmit/index.html
@@ -208,48 +208,48 @@
         el: '#data',
         data: {
             email: {
-                isReady: true,
+                isReady: false,
                 hasError: false,
-                value: 'test@test.com',
+                value: '',
             },
             name: {
-                isReady: true,
+                isReady: false,
                 hasError: false,
-                value: 'test name',
+                value: '',
             },
             desc_long: {
-                isReady: true,
+                isReady: false,
                 hasError: false,
-                value: 'test desc long',
+                value: '',
             },
             desc_short: {
-                isReady: true,
+                isReady: false,
                 hasError: false,
-                value: 'test desc short',
+                value: '',
             },
             apk: {
-                isReady: true,
+                isReady: false,
                 hasError: false,
                 ext: ['apk'],
                 size: 24, //MB
                 value: null,
             },
             icon: {
-                isReady: true,
+                isReady: false,
                 hasError: false,
                 ext: ['png', 'jpg'],
                 dim: [512, 512],
                 value: null,
             },
             promo: {
-                isReady: true,
+                isReady: false,
                 hasError: false,
                 ext: ['png', 'jpg'],
                 dim: [1024, 500],
                 value: null,
             },
             shots: {
-                isReady: true,
+                isReady: false,
                 hasError: false,
                 ext: ['png', 'jpg'],
                 dim: [480, 800],
